Fixed the overlapping issue in lower resolutions !

--- a/branches/gsoc-ontologies/wpi/extensions/ontologyindex/otagindex.css
+++ b/branches/gsoc-ontologies/wpi/extensions/ontologyindex/otagindex.css
@@ -1,25 +1,32 @@
 #index_mode {
-    clear : both;
-    width: 75px;
-    text-align: center;
-    margin-left: auto; margin-right: auto;
-    margin-bottom: 10px;
-    border:1px solid black;
+border:1px solid black;
+clear:both;
+margin-bottom:10px;
+margin-left:auto;
+margin-right:auto;
+text-align:center;
+width:75px;
 }
 #container_left {
-   float: left;
-   border:1px solid black;
-   padding : 5px 15px 0 15px;
+border:1px dashed Chocolate;
+float:left;
+padding:5px 15px 0;
+width:200px;
 }
 #ontology_list li {
-    cursor:pointer;
+cursor:pointer;
 }
 #species_list li {
-    cursor:pointer;
+cursor:pointer;
 }
 #container_right {
-    width: 600px; margin-left: auto; margin-right: auto;
-    border:1px solid black;
-    padding: 10px 0 10px 25px;
+border:1px dashed black;
+margin-left:20px;
+margin-right:auto;
+padding:10px 0 10px 25px;
+width:500px;
+float:left
 }
-
+#treeDiv {
+    text-align:center;
+}
